tests/baselines/reference/conditionalExpressionNewLine1.errors.txt
tests/cases/compiler/conditionalExpressionNewLine1.ts(1,9): error TS2304: Cannot find name 'a'.
tests/cases/compiler/conditionalExpressionNewLine1.ts(1,13): error TS2304: Cannot find name 'b'.
tests/cases/compiler/conditionalExpressionNewLine1.ts(1,17): error TS2304: Cannot find name 'c'.


==== tests/cases/compiler/conditionalExpressionNewLine1.ts (3 errors) ====
    var v = a ? b : c;
            ~
!!! error TS2304: Cannot find name 'a'.
                ~
!!! error TS2304: Cannot find name 'b'.
                    ~
!!! error TS2304: Cannot find name 'c'.